# collecta-crate

./: .gitignore  README.md  example.py  example_files.py  example_search.py  pyproject.toml  utils.py
src/collecta_crate/: __init__.py  collecta.py  tinycrate.py
src/collecta_crate/endpoints/: auth.py  files.py  objects.py  search.py
tests/: test_auth.py  test_crates.py  test_files.py  test_objects.py  test_search.py
