[project]
name = "collecta-crate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Moises Sacal", email = "moisbo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fuzz>=0.1.1",
    "pytest>=8.3.4",
    "pytest-httpserver>=1.1.0",
    "requests>=2.32.3",
    "rocrate-abstract",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
rocrate-abstract = { git = "https://github.com/Sydney-Informatics-Hub/rocrate-abstract.git" }
